@startuml

title __USERSMODELS's Class Diagram__\n

  namespace com.SWEII {
    namespace Models.UsersModels {
      class com.SWEII.Models.UsersModels.Administrator {
          + Administrator()
          + Administrator()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Models.UsersModels {
      class com.SWEII.Models.UsersModels.NormalUser {
          - address : String
          - phoneNumber : String
          + NormalUser()
          + NormalUser()
          + getAddress()
          + getPhoneNumber()
          + setAddress()
          + setPhoneNumber()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Models.UsersModels {
      class com.SWEII.Models.UsersModels.StoreOwner {
          + StoreOwner()
          + StoreOwner()
      }
    }
  }
  

  namespace com.SWEII {
    namespace Models.UsersModels {
      class com.SWEII.Models.UsersModels.User {
          - Id : long
          - confirmPassword : String
          - email : String
          - firstName : String
          - lastName : String
          - password : String
          - type : String
          - username : String
          + User()
          + User()
          + getConfirmPassword()
          + getEmail()
          + getFirstName()
          + getId()
          + getLastName()
          + getPassword()
          + getType()
          + getUsername()
          + setConfirmPassword()
          + setEmail()
          + setFirstName()
          + setId()
          + setLastName()
          + setPassword()
          + setType()
          + setUsername()
      }
    }
  }
  

  com.SWEII.Models.UsersModels.Administrator -up-|> com.SWEII.Models.UsersModels.User
  com.SWEII.Models.UsersModels.NormalUser -up-|> com.SWEII.Models.UsersModels.User
  com.SWEII.Models.UsersModels.StoreOwner -up-|> com.SWEII.Models.UsersModels.User


right footer

endfooter

@enduml
